--- a/index.html
+++ b/index.html
@@ -1,142 +1,90 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Solarteq Energia Renovável | Energia Solar no Rio de Janeiro</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Energia solar residencial no Rio de Janeiro e regiões. Economize na conta de luz com a Solarteq Energia Renovável.">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #ffffff;
-      color: #333;
-    }
-    header {
-      background: #0b6b3a;
-      color: #fff;
-      padding: 15px 25px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 22px;
-    }
-    header a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      background: #1aa260;
-      padding: 10px 16px;
-      border-radius: 6px;
-    }
-    .hero {
-      background: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-                  url("hero-solar.jpg") center/cover no-repeat;
-      color: #fff;
-      padding: 80px 20px;
-      text-align: center;
-    }
-    .hero h2 {
-      font-size: 34px;
-      margin-bottom: 10px;
-    }
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 25px;
-    }
-    .btn {
-      background: #1aa260;
-      color: #fff;
-      padding: 15px 28px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-size: 18px;
-      font-weight: bold;
-    }
-    section {
-      padding: 50px 20px;
-      max-width: 1100px;
-      margin: auto;
-    }
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 25px;
-    }
-    .card {
-      background: #f5f5f5;
-      border-radius: 10px;
-      padding: 25px;
-      text-align: center;
-    }
-    .card h3 {
-      color: #0b6b3a;
-    }
-    footer {
-      background: #0b6b3a;
-      color: #fff;
-      text-align: center;
-      padding: 25px;
-    }
-    footer a {
-      color: #aef3c8;
-      text-decoration: none;
-      font-weight: bold;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Solarteq Energia Renovável</title>
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,Helvetica,sans-serif}
+body{background:#f4f6f5;color:#333}
+header{background:#fff;padding:15px 40px;display:flex;justify-content:space-between;align-items:center;box-shadow:0 2px 8px rgba(0,0,0,0.1);position:sticky;top:0;z-index:1000}
+.logo{font-size:24px;font-weight:bold;color:#1e5f3c}
+nav a{margin:0 15px;text-decoration:none;color:#1e5f3c;font-weight:bold}
+.btn-top{background:#1e5f3c;color:#fff;padding:10px 18px;border-radius:25px;text-decoration:none}
+.hero{background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('https://images.unsplash.com/photo-1509395176047-4a66953fd231');background-size:cover;background-position:center;color:#fff;text-align:center;padding:120px 20px}
+.hero h1{font-size:42px;margin-bottom:20px}
+.hero p{font-size:18px;margin-bottom:30px}
+.btn-primary{background:#28a745;color:#fff;padding:14px 28px;border-radius:30px;text-decoration:none;font-weight:bold}
+.section{padding:70px 20px;text-align:center}
+.section h2{font-size:32px;margin-bottom:20px;color:#1e5f3c}
+.services{display:flex;flex-wrap:wrap;justify-content:center;gap:30px;margin-top:40px}
+.card{background:#fff;padding:30px;border-radius:10px;box-shadow:0 5px 15px rgba(0,0,0,0.1);width:300px}
+.card h3{color:#1e5f3c;margin-bottom:10px}
+.about{background:#e9f5ef}
+.contact{background:#1e5f3c;color:#fff}
+.contact p{margin:10px 0}
+footer{background:#0f3d27;color:#fff;text-align:center;padding:20px}
+.whatsapp{position:fixed;bottom:20px;right:20px;background:#25D366;color:#fff;padding:15px 18px;border-radius:50px;text-decoration:none;font-weight:bold;box-shadow:0 4px 12px rgba(0,0,0,0.3)}
+@media(max-width:768px){
+.services{flex-direction:column;align-items:center}
+.hero h1{font-size:28px}
+}
+</style>
 </head>
-
 <body>
 
 <header>
-  <h1>Solarteq Energia Renovável</h1>
-  <a href="https://wa.me/5521993895859" target="_blank">
-    📞 (21) 99389-5859
-  </a>
+<div class="logo">Solarteq</div>
+<nav>
+<a href="#inicio">Início</a>
+<a href="#sobre">Sobre</a>
+<a href="#servicos">Serviços</a>
+<a href="#contato">Contato</a>
+</nav>
+<a class="btn-top" href="https://wa.me/5521993895859" target="_blank">(21) 99389-5859</a>
 </header>
 
-<section class="hero">
-  <h2>Energia Solar para sua Casa</h2>
-  <p>Cidade do Rio de Janeiro e regiões</p>
-  <a class="btn" href="https://wa.me/5521993895859" target="_blank">
-    Solicitar Orçamento Agora
-  </a>
+<section class="hero" id="inicio">
+<h1>Energia Solar para sua Casa no Rio de Janeiro</h1>
+<p>Economize até 95% na conta de luz com energia limpa e sustentável.</p>
+<a href="https://wa.me/5521993895859" target="_blank" class="btn-primary">Solicitar Orçamento</a>
 </section>
 
-<section>
-  <h2 style="text-align:center;">Por que escolher a Solarteq?</h2>
-  <div class="cards">
-    <div class="card">
-      <h3>💰 Economia Real</h3>
-      <p>Reduza drasticamente sua conta de luz com energia solar fotovoltaica.</p>
-    </div>
-    <div class="card">
-      <h3>🌱 Energia Limpa</h3>
-      <p>Solução sustentável, valorizando seu imóvel e o meio ambiente.</p>
-    </div>
-    <div class="card">
-      <h3>🔧 Instalação Profissional</h3>
-      <p>Equipe qualificada, equipamentos homologados e garantia.</p>
-    </div>
-  </div>
+<section class="section about" id="sobre">
+<h2>Sobre a Solarteq</h2>
+<p>Somos especialistas em instalação de energia solar residencial e comercial no Rio de Janeiro e região. Trabalhamos com equipamentos de alta qualidade e garantia.</p>
 </section>
 
-<section style="text-align:center;">
-  <h2>Atendimento Residencial</h2>
-  <p>Projetos On-Grid, Off-Grid e Híbridos</p>
-  <a class="btn" href="https://wa.me/5521993895859" target="_blank">
-    Falar com um Especialista
-  </a>
+<section class="section" id="servicos">
+<h2>Nossos Serviços</h2>
+<div class="services">
+<div class="card">
+<h3>Projeto Personalizado</h3>
+<p>Dimensionamento completo conforme seu consumo.</p>
+</div>
+<div class="card">
+<h3>Instalação Completa</h3>
+<p>Equipe especializada e certificada.</p>
+</div>
+<div class="card">
+<h3>Manutenção e Suporte</h3>
+<p>Monitoramento e assistência técnica contínua.</p>
+</div>
+</div>
+</section>
+
+<section class="section contact" id="contato">
+<h2>Fale Conosco</h2>
+<p>WhatsApp: (21) 99389-5859</p>
+<p>Email: contato@solarteqenergia.com</p>
+<p>Atendemos todo o Rio de Janeiro e Região Metropolitana</p>
 </section>
 
 <footer>
-  <p><strong>Solarteq Energia Renovável</strong></p>
-  <p>Atendemos o Rio de Janeiro e regiões</p>
-  <p>WhatsApp: <a href="https://wa.me/5521993895859">(21) 99389-5859</a></p>
+<p>© 2026 Solarteq Energia Renovável - Todos os direitos reservados.</p>
 </footer>
+
+<a class="whatsapp" href="https://wa.me/5521993895859" target="_blank">WhatsApp</a>
 
 </body>
 </html>
