--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@ footer{background:#0f3d27;color:#fff;text-align:center;padding:20px}
 <body>
 
 <header>
-<div class="logo">Solarteq</div>
+<div class="logo">
+  <img src="logo-solarteq.png" alt="Solarteq Energia Renovável" style="height:60px;">
+</div>
 <nav>
 <a href="#inicio">Início</a>
 <a href="#sobre">Sobre</a>
