logo-solarteq.png A_high-resolution_photograph_showcases_a_modern_ho.png

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
@@ -48,7 +48,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <header>
 <div class="logo">
-<img src="logo-solarteq.png" alt="Solarteq Energia Renovável">
+<img src="logo-solarteq.png" alt="Solarteq Energia Renovável" style="height:60px;">
 </div>
 <nav>
 <a href="#inicio">Início</a>
